Refactored Day1 Part1 solution to use Sum instead of Aggregate

--- a/AOC2018-CSharp/AOC2018-CSharp.csproj
+++ b/AOC2018-CSharp/AOC2018-CSharp.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="W:\Personal\Advent-of-Code\AOC2018-CSharp\AOC2018-CSharp\DayOne.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
